fixed line wrapping on titles

--- a/style.css
+++ b/style.css
@@ -121,7 +121,6 @@ h2 {
 }
 .heroTitleInner > h1, .heroTitleInner > p { 
 	margin: 0;
-	max-width: 80%;
 	text-align: inherit;
 	display: flex;
 }
